--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=docker-demo
+# Kafka broker address
+spring.kafka.bootstrap-servers=localhost:9091
+
+# Producer configurations
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Consumer configurations
+spring.kafka.consumer.group-id=test-group
+spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.StringDeserializer
